1.2.2a: fully reworked conduct handling to allow multiple conducts